--- a/拼词游戏/woggle-puzzle.html
+++ b/拼词游戏/woggle-puzzle.html
@@ -4,8 +4,8 @@
 <head>
  <title>Webville Puzzles</title>
  <link rel="stylesheet" href="css/puzzle.css" type="text/css" />
- <script src="scripts/utils.js" type="text/javascript" charset="utf-8"></script>
- <script src="scripts/woggles.js" type="text/javascript" charset="utf-8"></script>
+ <script src="script/utils.js" type="text/javascript" charset="utf-8"></script>
+ <script src="script/tt.js" type="text/javascript" charset="utf-8"></script>
  </head>
 <body>
  <div id="background">
